Fixed Nav not closing, added slight effect to change contrast between main page and menu

--- a/src/output.css
+++ b/src/output.css
@@ -884,6 +884,10 @@ video {
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -1213,6 +1217,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline {
   outline-style: solid;
 }
@@ -1357,6 +1367,11 @@ video {
 
 .dark\:shadow-gray-800\/10:is(.dark *) {
   --tw-shadow-color: rgb(31 41 55 / 0.1);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark\:shadow-gray-800\/50:is(.dark *) {
+  --tw-shadow-color: rgb(31 41 55 / 0.5);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
